# lunch

./: Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  main.c  menu.lst
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
src/: Makefile.am  Makefile.in  lunch.c  lunch.h  main.c  menu.lst
tests/: Makefile.am  Makefile.in  check_lunch.c
